poc.api.loadtest/k8s/service-poc.api.fibonacci.yml
apiVersion: v1
kind: Service
metadata:
  name: pocapifibonacci-service
  labels:
    k8s-app: fibonacciapi
spec:
  selector:     
      component: apipoc
  ports:
  - port: 40430
    targetPort: 80
  type: LoadBalancer
  externalTrafficPolicy: Cluster
