poc.api.loadtest/k8s/ingress-poc.api.fibonacci.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-poc.api.fibonacci
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: 'Prefix'
        backend:
          service:
            name: pocapifibonacciservice
            port: 
              number: 8090
